# ai-newsletter-packages

./: .gitignore  README.md  pytest.ini
techcrunch_intel/: README.md  pyproject.toml
techcrunch_intel/scripts/: live_run.py
techcrunch_intel/techcrunch_intel/: __init__.py  export.py  extract.py  filter.py  ingest.py  keywords.py  kg.py  models.py  pipeline.py
techcrunch_intel/tests/: conftest.py  test_filter_extract.py
